--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.7.3",
     "dayjs": "^1.11.5",
+    "deventds": "^1.0.7",
     "docdash": "^1.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
@@ -51,6 +53,8 @@
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "jsdoc": "^3.6.10",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.1.3"
   }
 }
