--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-fido2-webauthn": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.2",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
