--- a/package.json
+++ b/package.json
@@ -23,15 +23,20 @@
   "homepage": "https://github.com/Team-DeVent/devent-frame#readme",
   "dependencies": {
     "@types/sanitize-html": "^2.6.2",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.1",
+    "cbor-js": "^0.1.0",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "css-loader": "^6.7.3",
     "dayjs": "^1.11.5",
-    "deventds": "^1.0.7",
+    "deventds": "^1.0.8",
     "docdash": "^1.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.3",
+    "js-base64": "^3.7.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
